add get button by string id

--- a/SoundLaunch/SoundLaunch/SoundLaunch.csproj
+++ b/SoundLaunch/SoundLaunch/SoundLaunch.csproj
@@ -67,10 +67,31 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="ActionLog.txt" />
+    <Content Include="Clips\ahmed-the-dead-terrorist-silence-i-kill-you_.mp3">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Clips\AirHorn.mp3">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Clips\fatality.swf.mp3">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Clips\hey_listen.mp3">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Clips\Homer-Woohoo.mp3">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Clips\mlg-airhorn.mp3">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Clips\MyNameiIsJeff.mp3">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Clips\surprise-motherfucker.mp3">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Clips\Wololo.mp3">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
